# medallion-pipeline

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
medallion/bronze/: ingest.py
medallion/gold/: aggregate.py
medallion/silver/: transform.py
tests/: test_bronze.py  test_gold.py  test_silver.py
