[project]
name = "medallion-pipeline"
version = "0.1.0"
description = "Pipeline Medallion Bronze/Silver/Gold with PySpark"
authors = [
    {name = "Maeva RODRIGUES",email = "maeva.rodrigues@lapiscine.pro"}
]
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=4.1.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "medallion"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.13,<0.16.0)"
]
